revised: converted image to document

--- a/julieannvico2/output1.html
+++ b/julieannvico2/output1.html
@@ -42,9 +42,22 @@
 									<h1>Output 1</h1>
 								</header>
 								<div class="image main">
-									<img src="images/outputs/E-Portfolio-julie-01.jpg" alt="" />
-									<img src="images/outputs/E-Portfolio-julie-02.jpg" alt="" />
-									<img src="images/outputs/E-Portfolio-julie-03.jpg" alt="" />
+									<img src="images/nakpil-and-locsin.png" alt="" />
+									
+									<p>Nakpil, architect, teacher, and civic leader is a pioneer and innovator in Philippine architecture. </p>
+									<p><b>National Artist for Architecture, 1973 (May 26, 1899 – May 7, 1986).</b></p>
+
+									<p>Juan F. Nakpil (on the right) is a pioneer of modern Philippine architecture. As an architect, Nakpil has contributed immensely to the present shape and form of Philippine modern architecture.    It is also largely due to his zealous representation and efforts that private Filipino architects and engineers, by law, are now able to participate in the design and execution of government projects. He has integrated strength, function, and beauty in the buildings that are the country’s heritage today. He designed the 1937 International Eucharistic Congress altar and rebuilt and enlarged the Quiapo Church in 1930 adding a dome and a second belfry to the original design. Among others, Nakpil’s major works are the Geronimo de los Reyes Building, Magsaysay Building, Rizal Theater, Capitol Theater, Captain Pepe Building, Manila Jockey Club, Rufino Building, Philippine Village Hotel, University of the Philippines Administration and University Library, and the reconstructed Rizal house in Calamba, Laguna.</p>
+
+									<p>Leandro V. Locsin (on the left) (August 15, 1928 – November 15, 1994) was a Filipino architect, artist, and interior designer known for his use of concrete, floating volume and simplistic design in his various projects. Mr. Leandro V. Locsin is a celebrated architect of the Philippines. He designed numerous modern building, which adopt climatic features of Southeast Asia and the traditional style of the Philippines. His accomplishment contributed remarkable to the development of architectural culture in Asia.</p>
+									<div class="mini-container">
+									<img id="valera" src="images/valera.jpg" alt="" />
+									<br />
+									<p><b>Ramon Valera</b></p>
+								   </div>
+
+								   <p>Ramón Valera was a Filipino fashion designer who was bestowed with the National Artist of the Philippines honor in 2006. He is the first and only Filipino fashion designer to receive this distinction to date. For the next three decades Valera was the best-known couturier in the Philippines. He was the only male dressmaker who could design, cut, baste and sew all by himself. Every First Lady of the islands, from Aurora Aragon Quezon to Imelda Romualdez Marcos — with the exception of Eva Macapagal — owned three or four of his creations. As the fashion dictator of his generation, he came out with the following observations: 1. Filipino women should keep the shade of their skin in mind. They should not wear mocha brown laced with black. 2. Champagne and white are good colors to wear. 3. Don't always follow what magazines say is the style. 4. Most women don't know what is best for them. Some are big and fat yet dare to wear peasant dresses with wide belts. [He did not like to design for fat women or for those with big busts.]</p>
+
 								</div>
 							</section>
 
