--- a/julieannvico2/output3.html
+++ b/julieannvico2/output3.html
@@ -42,8 +42,12 @@
 									<h1>Video Showing</h1>			
 								</header>
 								<div class="image main">
-								    <img src="images/outputs/E-Portfolio-julie-07.jpg" alt="" />
-									<img src="images/outputs/E-Portfolio-julie-08.jpg" alt="" />
+								    <img src="images/output3.1.png" alt="" /><br>
+									<img src="images/output3.2.png" alt="" />
+									<br><br>
+									<p>The first one is a ballet type of dance and the four elements of dance is already present which is the body, energy, space and time so changing levels slowly then kicking your legs out quickly is an example of moving your space in a specific time, then using another body part with high energy.</p>
+
+									<p>The second one is a type of Philippine folk dance. The elements of dance present here is space, dynamics and rhythm so space have six aspect namely floor plan, direction, focus, level, dimension, and contour. Dynamics have five aspect namely swinging movement, sustained movement, percussive movement, suspend movement and the vibratory movement and the last one is rhythm that has measure, tempo, underlying beat, phrase, accent and intensity. </p>
 								</div>
 							</section>
 					</div>
