--- a/julieannvico2/output4.html
+++ b/julieannvico2/output4.html
@@ -42,8 +42,17 @@
 									<h1>Theater/Film</h1>
 								</header>
 								<div class="image main">
-								    <img src="images/outputs/E-Portfolio-julie-09.jpg" alt="" />
-									<img src="images/outputs/E-Portfolio-julie-10.jpg" alt="" />
+								    <img src="images/output41.png" alt="" />
+									<p class="pcenter"><b>Sa mga Kuko ng Liwanag (1976) by Lino Brocka</b></p><br>
+									<img src="images/output4.2.png" alt="" />
+									<p class="pcenter"><b>Relasyon (1982) by Ishmael Bernal </b></p>
+									<br><br>
+
+									<p><b>Sa mga kuko ng liwanag (1976) by Lino Brocka</b><br>
+										This movie is all about the fisherman coming from poor area, descent into social alienation and coming to manila to search for his loved one named Ligaya and this is the element of film what we called theme of movie. The cast here is Hilda koronel, Lou Salvador, JR., Tommy Abuel, and Bembol Roco.</p>
+
+									<p><b>Relasyon (1982) by Ishmael Bernal </b><br>
+										This movie is all about the woman who always take risks to build a meaningful relationship with a married man despite different hurdles that bound between them and this is the element of film what we called theme of the movie. The main character here is Christopher De Leon and Vilma Santos. </p>
 								</div>
 							</section>
 
