edited link outpu4

--- a/julieannvico2/index.html
+++ b/julieannvico2/index.html
@@ -128,7 +128,7 @@
             <header>
               <h2>Output 4</h2>
             </header>
-            <a href="Output 4.html" class="image fit"
+            <a href="output4.html" class="image fit"
               ><img src="images/output4.jpg" alt=""
             /></a>
             <p>
