--- a/julieannvico2/index.html
+++ b/julieannvico2/index.html
@@ -136,7 +136,7 @@
             </p>
             <ul class="actions special">
               <li>
-                <a href="Output 4.html" class="button"
+                <a href="output4.html" class="button"
                   >Full Story</a
                 >
               </li>
